Creacion de templates home.html, a.html, b.html. c.html, d.html, e.html; Animación de ventana modal y slide

--- a/html/presentacion.html
+++ b/html/presentacion.html
@@ -1,1 +1,9 @@
-<h1> Presentacion </h1>
+
+<h1>Presentacion</h1>
+
+<button ng-click="abrirModal(estado=!estado)" class="btn btn-info">Instrucciones</button>
+    <a href="#/home" class="btn btn-success"  ng-click="">Inicio</a>
+
+<div ng-show="bool" class="modalP">
+    <button ng-click="abrirModal(estado=!estado)" class="btn btn-success">CERRAR</button>
+</div>
