--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Plantilla</title>
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
         <link rel="stylesheet" href="css/style.css">
         <!--[if lt IE 9]>
         <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
         <![endif]-->
         <script src="bower_components/angular/angular.js"></script>
+        <script src="bower_components/angular-animate/angular-animate.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
+        <script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
+        <script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
     </head>
     <body ng-app="plantilla">
         <section ng-view></section>
         <script src="js/app.js"></script>
+        <script src="js/controller.js"></script>
     </body>
 </html>
