--- a/html/home.html
+++ b/html/home.html
@@ -1,29 +1,27 @@
 <div class="row">
-    <div class="col-md-8">
-        <div class="jumbotron">
-            <div class="item"><a href="#/home/a">¿Qué es y Porqué?</a></div>
+    <div class="col-md-8 col-md-offset-0 col-sm-8 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+        <div class="jumbotron item animation-item">
+            <div class="item-title">¿Qué es y Porqué?</div>
         </div>
     </div>
-    <div class="col-md-4">
-        <div class="jumbotron">
-            <div class="item"><a href="#/home/b">¿Cúal es tu Rol?</a></div>
+    <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+        <div class="jumbotron item animation-item">
+            <div class="item-title">¿Cúal es tu Rol?</div>
         </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-md-4">
-        <div class="jumbotron">
-            <div class="item"><a href="#/home/c">Componentes</a></div>
+    <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+        <div class="jumbotron item animation-item">
+            <div class="item-title">Componentes</div>
         </div>
     </div>
-    <div class="col-md-4">
-        <div class="jumbotron">
-            <div class="item"><a href="#/home/d">Etapas</a></div>
+    <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+        <div class="jumbotron item animation-item">
+            <div class="item-title">Etapas</div>
         </div>
     </div>
-    <div class="col-md-4">
-        <div class="jumbotron">
-            <div class="item"><a href="#/home/e">Herramientas</a></div>
+    <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+        <div class="jumbotron item animation-item ">
+            <div class="item-title">Herramientas</div>
         </div>
     </div>
 </div>
