--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
     </head>
     <body ng-app="plantilla">
-        <section ng-view></section>
+        <section class="container">
+            <div class="section" ng-view></div>
+        </section>
         <script src="js/app.js"></script>
         <script src="js/controller.js"></script>
     </body>
