--- a/html/e.html
+++ b/html/e.html
@@ -1,21 +1,20 @@
-<div class="slide animation-slide">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
-            <div class="jumbotron item">
-                <div>Video</div>
-            </div>
+
+<div class="row">
+    <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
+        <div class="jumbotron item animated bounceInDown">
+            <div>Video</div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 col-xs-10 col-xs-offset-1">
-            <div class="jumbotron item">
-                <div>Opcion 1</div>
-            </div>
+</div>
+<div class="row">
+    <div class="col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+        <div class="jumbotron item animated bounceInLeft">
+            <div>Opcion 1</div>
         </div>
-        <div class="col-md-5 col-md-offset-0 col-sm-5 col-sm-offset-0  col-xs-10 col-xs-offset-1">
-            <div class="jumbotron item">
-                <div>Opcion 2</div>
-            </div>
+    </div>
+    <div class="col-md-5 col-md-offset-0 col-sm-5 col-sm-offset-0  col-xs-10 col-xs-offset-1">
+        <div class="jumbotron item animated bounceInRight">
+            <div>Opcion 2</div>
         </div>
     </div>
 </div>
