Cambios en el menu de navegación principal

--- a/html/home.html
+++ b/html/home.html
@@ -1,26 +1,26 @@
 <div class="row">
     <div class="col-md-8 col-md-offset-0 col-sm-8 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-        <div class="jumbotron item animated zoomIn">
+        <div class="jumbotron item animated zoomIn"  ng-click="hCtrl.go('/home/a')">
             <div class="item-title">¿Qué es y Porqué?</div>
         </div>
     </div>
     <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-        <div class="jumbotron item animated zoomIn">
+        <div class="jumbotron item animated zoomIn"  ng-click="hCtrl.go('/home/b')">
             <div class="item-title">¿Cúal es tu Rol?</div>
         </div>
     </div>
     <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-        <div class="jumbotron item animated zoomIn">
+        <div class="jumbotron item animated zoomIn"  ng-click="hCtrl.go('/home/c')">
             <div class="item-title">Componentes</div>
         </div>
     </div>
     <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-        <div class="jumbotron item animated zoomIn">
+        <div class="jumbotron item animated zoomIn"  ng-click="hCtrl.go('/home/d')">
             <div class="item-title">Etapas</div>
         </div>
     </div>
     <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-        <div class="jumbotron item animated zoomIn ">
+        <div class="jumbotron item animated zoomIn"  ng-click="hCtrl.go('/home/e')">
             <div class="item-title">Herramientas</div>
         </div>
     </div>
