--- a/html/a.html
+++ b/html/a.html
@@ -1,20 +1,96 @@
+<style>
+    .video
+    {
+        background: url('img/menu1.png');
+        width: 301px;
+        height:278px;
+        overflow: hidden;
+    }
+    .sub-video
+    {
+        position: absolute;
+        background: url('img/menu1a.png');
+        background-repeat:no-repeat;
+        width: 100%;
+        height:100%;
+        top: 100%;
+        transition: top .3s linear;
+    }
+    .video:hover .sub-video
+    {
+        top:0;
+    }
 
-<div class="row">
-    <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
-        <div class="jumbotron item animated bounceInDown">
-            <div>Video</div>
-        </div>
+    .concepto
+    {
+        background: url('img/menu2.png');
+        width: 301px;
+        height:278px;
+        overflow: hidden;
+    }
+    .sub-concepto
+    {
+        position: absolute;
+        background: url('img/menu2a.png');
+        background-repeat:no-repeat;
+        width: 100%;
+        height:100%;
+        top: 100%;
+        transition: top .3s linear;
+    }
+    .concepto:hover .sub-concepto
+    {
+        top:0;
+    }
+
+    .practica
+    {
+        background: url('img/menu3.png');
+        width: 301px;
+        height:278px;
+        overflow: hidden;
+    }
+    .sub-practica
+    {
+        position: absolute;
+        background: url('img/menu3a.png');
+        background-repeat:no-repeat;
+        width: 100%;
+        height:100%;
+        top: 100%;
+        transition: top .3s linear;
+    }
+    .practica:hover .sub-practica
+    {
+        top:0;
+    }
+</style>
+<div class="jumbotron" style="height: 600px;">
+    <img class="logo" src="img/logo2.png" alt="Logo Seguros Bolivar">
+    <div class="bar-info">
+        <p>Curso Gestión del Desempeño / <span>{{aCtrl.subtitulo}}</span> <span class="glyphicon glyphicon-question-sign"></span></p>
     </div>
-</div>
-<div class="row">
-    <div class="col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 col-xs-10 col-xs-offset-1">
-        <div class="jumbotron item animated bounceInLeft">
-            <div>Opcion 1</div>
+    <div class="row sub-nav">
+        <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+            <div class="item animated bounceInDown">
+                <div class="center-block video">
+                    <div class="sub-video"></div>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="col-md-5 col-md-offset-0 col-sm-5 col-sm-offset-0  col-xs-10 col-xs-offset-1">
-        <div class="jumbotron item animated bounceInRight">
-            <div>Opcion 2</div>
+        <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+            <div class="item animated bounceInLeft">
+                <div class="center-block concepto">
+                    <div class="sub-concepto"></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+            <div class="item animated bounceInRight">
+                <div class="center-block practica">
+                    <div class="sub-practica"></div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
