--- a/html/presentacion.html
+++ b/html/presentacion.html
@@ -1,11 +1,10 @@
 <div class="row">
     <div class="col-md-12">
-        <div class="jumbotron animated zoomIn" style="height: 600px;">
-            <h1>Presentación</h1>
-            <div class="btn-intro">
-                <button ng-click="pCtrl.abrirModal(estado=!estado)" class="btn btn-info">Instrucciones</button>
-                <button href="#/home" class="btn btn-success"  ng-click="">Inicio</button>
-            </div>
+        <div class="animated zoomIn" style="height: 600px;">
+            <img src="img/logo.png" class="center-block">
+            <br>
+            <h1 class="titulo text-center" ng-click="pCtrl.go('/nav')">CURSO</h1>
+            <div class="etiqueta center-block" ng-click="pCtrl.abrirModal(estado=!estado)"><h2>Gestión de Desempeño</h2></div>
         </div>
     </div>
 </div>
