--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <div class="section" ng-view></div>
         </section>
         <script src="js/app.js"></script>
-        <script src="js/controller.js"></script>
+        <script src="js/services/ScrollToService.js"></script>
+        <script src="js/controllers/PresentationController.js"></script>
+        <script src="js/controllers/NavigationController.js"></script>
+        <script src="js/controllers/AController.js"></script>
+        <script src="js/controllers/A1Controller.js"></script>
     </body>
 </html>
