--- a/html/presentation.html
+++ b/html/presentation.html
@@ -13,7 +13,7 @@
     }
 </style>
 
-<<div id="intro1" class="row animated zoomIn" style="height: 600px;">
+<div id="intro1" class="row animated zoomIn" style="height: 600px;">
     <div class="col-md-12">
         <div >
             <img src="img/logo.png" class="center-block">
