--- a/html/a2.html
+++ b/html/a2.html
@@ -1,57 +1,56 @@
 <style>
-    .title-progress{color:#757575;font-size: 12pt; margin-bottom: 0 !important;}
-    .bar-progress
+    section
     {
-        width: 80%;
-        height: 5px;
-        background: #757575;
-        margin:0 auto;
+        background-color: rgba(0,0,0,.7);
     }
-    .active-title
-    {
-        color: #4BAA18;
-    }
-    .active-bar{
-        background: #4BAA18;
-    }
-    .sub-item
-    {
-        cursor: pointer;
-    }
-</style>
-<div class="jumbotron" style="height: 600px;">
-    <img class="logo" src="img/logo2.png" alt="Logo Seguros Bolivar">
-    <div class="bar-info">
-        <p>Curso Gestión del Desempeño / <span>{{aCtrl.subtitulo}}</span> <span class="glyphicon glyphicon-question-sign"></span></p>
-    </div>
-    <div ng-hide="slide">
-        <br>
-        <div class="row">
-            <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-                <div class="sub-item animated zoomIn">
-                    <p class="text-center title-progress">Conceptos</p>
-                    <div class="bar-progress"></div>
-                </div>
-            </div>
-            <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-                <div class="sub-item  animated zoomIn">
-                    <p class="text-center title-progress active-title">Video</p>
-                    <div class="bar-progress active-bar"></div>
-                </div>
-            </div>
-            <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-                <div class="sub-item animated zoomIn">
-                    <p class="text-center title-progress">Manos a la obra</p>
-                    <div class="bar-progress"></div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <video width="100%">
 
-                </video>
-            </div>
-        </div>
+    #video
+    {
+        position: relative;
+        width: 900px;
+        height: 600px;
+        margin: 0 auto;
+        background: #000;
+        overflow: hidden;
+    }
+    .pag
+    {
+        width: 100%;
+        height:100%;
+        background: #fff;
+    }
+
+    .cerrar
+    {
+        position: absolute;
+        color: #fff;
+        font-size: 28pt;
+        border: 3px solid #fff;
+        width: 43px;
+        height: 43px;
+        line-height: 40px;
+        text-align: center;
+        border-radius: 60px;
+        right: 76px;
+        top: -40px;
+        cursor: pointer;
+        -webkit-transition: all .5s;
+        -moz-transition: all .5s;
+        -ms-transition: all .5s;
+        -o-transition: all .5s;
+        transition: all .5s;
+    }
+    .cerrar:hover
+    {
+        color:#ff0000;
+        border: 4px solid #ff0000;
+    }
+
+</style>
+
+<div class="animated zoomIn" style="height: 600px;">
+    <a href="#/home/a" class="cerrar">X</a>
+    <div id="video">
+
     </div>
 </div>
