--- a/html/a3.html
+++ b/html/a3.html
@@ -1,57 +1,85 @@
 <style>
-    .title-progress{color:#757575;font-size: 12pt; margin-bottom: 0 !important;}
-    .bar-progress
+    section
     {
-        width: 80%;
-        height: 5px;
-        background: #757575;
-        margin:0 auto;
+        background-color: rgba(0,0,0,.7);
     }
-    .active-title
-    {
-        color: #4BAA18;
-    }
-    .active-bar{
-        background: #4BAA18;
-    }
-    .sub-item
-    {
-        cursor: pointer;
-    }
-</style>
-<div class="jumbotron" style="height: 600px;">
-    <img class="logo" src="img/logo2.png" alt="Logo Seguros Bolivar">
-    <div class="bar-info">
-        <p>Curso Gestión del Desempeño / <span>{{aCtrl.subtitulo}}</span> <span class="glyphicon glyphicon-question-sign"></span></p>
-    </div>
-    <div ng-hide="slide">
-        <br>
-        <div class="row">
-            <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-                <div class="sub-item animated zoomIn">
-                    <p class="text-center title-progress ">Conceptos</p>
-                    <div class="bar-progress "></div>
-                </div>
-            </div>
-            <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-                <div class="sub-item  animated zoomIn">
-                    <p class="text-center title-progress">Video</p>
-                    <div class="bar-progress"></div>
-                </div>
-            </div>
-            <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-                <div class="sub-item animated zoomIn">
-                    <p class="text-center title-progress active-title">Manos a la obra</p>
-                    <div class="bar-progress active-bar"></div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <video width="100%">
 
-                </video>
+    #actividad
+    {
+        position: relative;
+        width: 900px;
+        height: 600px;
+        margin: 0 auto;
+        overflow: hidden;
+    }
+    .pag
+    {
+        width: 100%;
+        height:100%;
+        background: #fff;
+    }
+
+    .cerrar
+    {
+        position: absolute;
+        color: #fff;
+        font-size: 28pt;
+        border: 3px solid #fff;
+        width: 43px;
+        height: 43px;
+        line-height: 40px;
+        text-align: center;
+        border-radius: 60px;
+        right: 76px;
+        top: -40px;
+        cursor: pointer;
+        -webkit-transition: all .5s;
+        -moz-transition: all .5s;
+        -ms-transition: all .5s;
+        -o-transition: all .5s;
+        transition: all .5s;
+    }
+    .cerrar:hover
+    {
+        color:#ff0000;
+        border: 4px solid #ff0000;
+    }
+
+</style>
+<div class="animated zoomIn" style="height: 600px;">
+    <a href="#/home/a" class="cerrar">X</a>
+    <div id="actividad">
+        <div class="pag">
+            <div ng-hide="a3Ctrl.acierto">
+                <h3>{{a3Ctrl.title}}</h3>
+                <ul>
+                    <li ng-repeat="i in a3Ctrl.items" ng-click="a3Ctrl.validar($index)">{{i}}</li>
+                </ul>
+            </div>
+            <div ng-show="a3Ctrl.acierto">
+                <p>Para Que nuestras </p>
             </div>
         </div>
     </div>
+    <!--<div class="row">
+        <div class="col-md-6">
+            <ul>
+                <li ng-repeat="ic in a3Ctrl.concept">{{ic}}</li>
+            </ul>
+        </div>
+        <div class="col-md-6">
+            <ul>
+                <li ng-repeat="id in a3Ctrl.definition">
+                    {{id}}
+                    <ul>
+                        <li style="display: inline-block; margin: 0 10px;" ng-repeat="i in ['a','b','c','d','e']" ng-click="a3Ctrl.almacenar($parent.$index,$index)">
+                            <input type="radio" name="parent{{$parent.$index}}" ng-checked="$first">{{i}}
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <button class="btn btn-default" ng-click="a3Ctrl.validar()">Validar</button>
+    </div> -->
+
 </div>
