--- a/html/a1.html
+++ b/html/a1.html
@@ -64,8 +64,8 @@
             <img class="animated" ng-class="{fadeInLeft :a1Ctrl.estado1}" src="img/infografia1/e2.png" style="position: absolute;width: 130px;top: 65px;left: 75px; animation-delay: 2s;">
             <img class="animated" ng-class="{zoomIn :a1Ctrl.estado1}" src="img/infografia1/e3.png" style="position: absolute; top: 310px; left: 230px;width: 55px;animation-delay: 11s; ">
             <img class="animated" ng-class="{zoomIn :a1Ctrl.estado1}" src="img/infografia1/e4.png" style="position: absolute;width: 340px;top: 100px;left: 337px; animation-delay: 4s;">
-            <img src="img/infografia1/e5.png" style="position: absolute;right: 0; width: 200px; top: 280px;">
-            <img src="img/infografia1/e6.png" style="position: absolute; top: 477px; left: 1%; width: 98%;">
+            <img class="animated" ng-class="{zoomIn :a1Ctrl.estado1}" src="img/infografia1/e5.png" style="position: absolute;right: 0; width: 200px; top: 280px; animation-delay: .5s;">
+            <img class="animated" ng-class="{fadeInUp :a1Ctrl.estado1}" src="img/infografia1/e6.png" style="position: absolute; top: 477px; left: 1%; width: 98%; animation-delay: .5s;">
             <img class="animated" ng-class="{zoomIn :a1Ctrl.estado1}" src="img/infografia1/e7.png" style="position: absolute; top: 490px; left: 190px; width: 500px; animation-delay: 12s;}">
 
             <span class="glyphicon glyphicon-menu-down nav-infografia" ng-click="a1Ctrl.saltaSlide([0,600,2])"></span>
@@ -82,7 +82,7 @@
 
         </div>
         <div id="pag3" class="pag">
-            <img src="img/infografia1/e20.png" style="position: absolute; top: 1608px; left: 34px; width: 830px; animation-delay: 3s; z-index: 0;">
+            <img class="animated" ng-class="{fadeInUp :a1Ctrl.estado3}" src="img/infografia1/e20.png" style="position: absolute; top: 1608px; left: 34px; width: 830px; animation-delay: 1s; z-index: 0;">
             <img class="animated" ng-class="{zoomIn: a1Ctrl.estado3}" src="img/infografia1/e14.png" style="position: absolute; top: 1130px; left: 20px; width: 683px; animation-delay: 1s;">
             <img class="animated" ng-class="{zoomIn: a1Ctrl.estado3}" src="img/infografia1/e15.png" style="position: absolute; top: 1345px; left: 20px; width: 683px; animation-delay: 3s;">
             <img class="animated" ng-class="{zoomIn: a1Ctrl.estado3}" src="img/infografia1/e16.png" style="position: absolute; top: 1560px; left: 50px; width: 120px; animation-delay: 4s;">
