--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
         <script src="js/controllers/AController.js"></script>
         <script src="js/controllers/A1Controller.js"></script>
         <script src="js/controllers/A3Controller.js"></script>
+        <script src="js/controllers/BController.js"></script>
+        <script src="js/controllers/B1Controller.js"></script>
+        <script src="js/controllers/CController.js"></script>
+        <script src="js/controllers/C1Controller.js"></script>
     </body>
 </html>
