--- a/html/c1.html
+++ b/html/c1.html
@@ -61,21 +61,21 @@
         <div id="pag1" class="pag">
 
             <img class="animated" ng-class="{flipInX :c1Ctrl.estado1}" src="img/infografia3/e1.png" style="position: absolute;width: 230px;top:10px;left: 325px; animation-delay: 1s;">
-            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e2.png" style="position: absolute;width: 370px;top: 25px;left: 280px; animation-delay: 2s">
-            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e3.png" style="position: absolute; width: 580px; top: 103px; left: 170px; animation-delay: 3s;">
-            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e4.png" style="position: absolute;width: 390px;top: 280px;left: 270px; animation-delay: 3.5s;">
-            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e5.png" style="position: absolute;width: 280px; top: 340px; left: 270px; animation-delay: 4s;">
-            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e6.png" style="position: absolute;width: 55px; top: 369px; left: 270px; animation-delay: 4s;">
-            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e7.png" style="position: absolute;width: 90px; top: 369px; left: 350px; animation-delay: 4s;">
-            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e8.png" style="position: absolute;width: 55px; top: 369px; left: 500px; animation-delay: 4s;">
-            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e9.png" style="position: absolute;width: 80px; top: 452px; left: 490px; animation-delay: 4s;">
-            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e10.png" style="position: absolute;width: 150px; top: 350px; left: 595px; animation-delay: 4s;">
-            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e11.png" style="position: absolute;width: 60px; top: 430px; left: 670px; animation-delay: 4s;">
-            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e12.png" style="position: absolute;width: 200px; top: 540px; left: 270px; animation-delay: 4s;">
+            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e2.png" style="position: absolute;width: 370px;top: 25px;left: 280px; animation-delay: 1.5s;">
+            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e3.png" style="position: absolute; width: 580px; top: 103px; left: 170px; animation-delay: 2s;">
+            <img class="animated" ng-class="{fadeInLeft :c1Ctrl.estado1}" src="img/infografia3/e4.png" style="position: absolute;width: 390px;top: 280px;left: 270px; animation-delay: 2.5s;">
+            <img class="animated" ng-class="{fadeInLeft  :c1Ctrl.estado1}" src="img/infografia3/e5.png" style="position: absolute;width: 280px; top: 340px; left: 270px; animation-delay: 3s;">
+            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e6.png" style="position: absolute;width: 55px; top: 369px; left: 270px; animation-delay: 3.5s;">
+            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e7.png" style="position: absolute;width: 90px; top: 369px; left: 350px; animation-delay: 3.5s;">
+            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e8.png" style="position: absolute;width: 55px; top: 369px; left: 500px; animation-delay: 3.5s;">
+            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e9.png" style="position: absolute;width: 80px; top: 452px; left: 490px; animation-delay: 3.5s;">
+            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e10.png" style="position: absolute;width: 150px; top: 350px; left: 595px; animation-delay: 3.5s;">
+            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado1}" src="img/infografia3/e11.png" style="position: absolute;width: 60px; top: 430px; left: 670px; animation-delay: 3.5s;">
+            <img class="animated" ng-class="{fadeInLeft :c1Ctrl.estado1}" src="img/infografia3/e12.png" style="position: absolute;width: 200px; top: 540px; left: 270px; animation-delay: 4s;">
             <span class="glyphicon glyphicon-menu-down nav-infografia" ng-click="c1Ctrl.saltaSlide([0,600,2])"></span>
         </div>
         <div id="pag2" class="pag">
-            <img class="animated" ng-class="{zoomIn :c1Ctrl.estado2}" src="img/infografia3/e13.png" style="position: absolute; width: 580px; top: 610px; left: 170px; animation-delay: 1s;">
+            <img class="animated" ng-class="{flipInX :c1Ctrl.estado2}" src="img/infografia3/e13.png" style="position: absolute; width: 580px; top: 610px; left: 170px; animation-delay: 1s;">
             <img class="animated" ng-class="{zoomIn :c1Ctrl.estado2}" src="img/infografia3/e14.png" style="position: absolute; width: 300px; top: 810px; left: 200px; animation-delay: 1s;">
             <img class="animated" ng-class="{zoomIn :c1Ctrl.estado2}" src="img/infografia3/e15.png" style="position: absolute; width: 337px; top: 858px; left: 200px; animation-delay: 1s;">
             <img class="animated" ng-class="{zoomIn :c1Ctrl.estado2}" src="img/infografia3/e16.png" style="position: absolute; width: 260px; top: 920px; left: 200px; animation-delay: 1s;">
