--- a/html/a3.html
+++ b/html/a3.html
@@ -11,6 +11,8 @@
         height: 600px;
         margin: 0 auto;
         overflow: hidden;
+        font-family: 'Lato', sans-serif;
+        color:#686868;
     }
     .pag
     {
@@ -44,6 +46,15 @@
         color:#ff0000;
         border: 4px solid #ff0000;
     }
+    ul
+    {
+        list-style: none;
+    }
+    ul li
+    {
+        cursor: pointer;
+        transition:all 1s;
+    }
 
 </style>
 <div class="animated zoomIn" style="height: 600px;">
@@ -51,13 +62,23 @@
     <div id="actividad">
         <div class="pag">
             <div ng-hide="a3Ctrl.acierto">
-                <h3>{{a3Ctrl.title}}</h3>
-                <ul>
-                    <li ng-repeat="i in a3Ctrl.items" ng-click="a3Ctrl.validar($index)">{{i}}</li>
-                </ul>
+                <div class="col-md-12">
+                    <video class="center-block" width="600" height="400" style="position:relative;background: #000; top: 5px;">
+
+                    </video>
+                </div>
+                <div class="col-md-12">
+                    <div style="width: 80%;position: relative;margin: 35px auto;">
+                        <h4>{{a3Ctrl.title}}</h4>
+                        <br>
+                        <ul>
+                            <li ng-repeat="i in a3Ctrl.items" ng-click="a3Ctrl.validar($index)">{{i}}</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <div ng-show="a3Ctrl.acierto">
-                <p>Para Que nuestras </p>
+                <h1>{{a3Ctrl.mensaje}}</h1>
             </div>
         </div>
     </div>
