--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
         <script src="js/controllers/B1Controller.js"></script>
         <script src="js/controllers/CController.js"></script>
         <script src="js/controllers/C1Controller.js"></script>
+        <script src="js/controllers/DController.js"></script>
+        <script src="js/controllers/D1Controller.js"></script>
     </body>
 </html>
